--- a/love/index.html
+++ b/love/index.html
@@ -33,7 +33,7 @@
 	<div class="flowtime">
 		<div class="ft-section section-1" data-id="section-1">
 			<div id="/section-1/page-1" class="ft-page page-1" data-id="page-1">
-				<p class="text1" id="ce">  以前的我</p>
+				<p class="text1" id="ce"> 狗子， 以前的我</p>
 				<p class="text2">一个人的生活</p>
 		
 			</div>
