--- a/css学习/task4/task4-1.html
+++ b/css学习/task4/task4-1.html
@@ -12,6 +12,7 @@
         <a class="left">注册</a>
         <a class="center">登录</a>
         <a class="right">关闭</a>
+        
     </div>
     <div class="mian">
         <div class="phone">
@@ -23,7 +24,7 @@
             <input  placeholder="请输入密码" type="password">
         </div>
     </div>
-    <button class="load">登 &nbsp录</button>
+    <button class="load">登 &nbsp;录</button>
     <div class="footer"><a class="mima" href="#">忘记密码</a></div>
     
 </body>
