--- a/css学习/task5/5-1.html
+++ b/css学习/task5/5-1.html
@@ -62,8 +62,8 @@
                 
                 <li class="last">
                     <span class="text2">自我介绍</span>
-                    <img src="pic/08.png" alt="">
-                    <span class="last2">
+                    <img src="pic/08.png" alt="">&nbsp;
+                    <span class="last">
                         可以洗衣做饭照顾老人,可以洗衣做饭照顾老人,可以洗衣做饭照顾老人,
                         可以洗衣做饭照顾老人,可以洗衣做饭照顾老人,可以洗衣做饭照顾老人,
                     </span>
