--- a/css学习/task7/7html/7-2.html
+++ b/css学习/task7/7html/7-2.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,29 +8,254 @@
     <title>7-2</title>
     <link rel="stylesheet" href="7-2.css">
 </head>
+<a href=".\7-3.html"></a>
+
 <body>
-    <div class="header">
-        <img class="pic_left" src="" alt="">
-        <span class="h_center">投票</span>
-        <img class="pic_right" src="" alt="">
-    </div>
-    <div class="tip">
-        <span class="wz">发言讨论结束,请大家投票</span>
-        <img src="" alt="">
-        <img src="" alt="">
-    </div>
-    <div class="tip_1">
-        <img src="" alt="">
-        <div class="wz_1">点击得票数最多的头像</div>
-    </div>
-    <div class="main">
-        <div class="box"> 
-            <div class="box_name">水民</div>
-            <div class="box_num">1号</div>
+    <!-- 这样会更加方便 ,使用三段式 -->
+    <div class="fix">
+        <div class="header">
+            <a href="..\7-1.html">
+            <img class="pic_left" src=".\.\pic\1.png" alt="">
+            </a>
+            <span class="h_center">投票</span>
+            <a href="..\7-1.html">
+            <img class="pic_right" src=".\.\pic\2.png" alt="">
+            </a>
+
+        </div>
+        <div class="tip">
+            <span class="wz">发言讨论结束,请大家投票</span>
+            <img class="pic_vide" src=".\.\pic\3.png" alt="">
+            <audio class="video" src=".\.\pic\财富自由.mp3" controls="autoplay"></audio>
+            <!-- <img src="" alt=""> -->
+        </div>
+        <div class="tip_1">
+            <div class="sj"></div>
+            <!-- <img class="pic_tr" src=".\.\pic\4.png" alt=""> -->
+            <div class="wz_1">点击得票数最多的头像</div>
         </div>
     </div>
-    <div class="footer">
-        <button class="bt">投死 </button>
+    <div class="content">
+        <div class="main">
+            <div class="box">
+                <div class="box_name">水民</div>
+                <div class="box_num">1号</div>
+                <div class="image-box">
+
+                    <a href=".\7-3.html" class="image-1"></a>
+                    <a href=".\7-3.html" class="image-2"></a>
+                    <a href=".\7-3.html" class="image-3"></a>
+                    <a href=".\7-3.html" class="image-4"></a>
+                </div>
+            </div>
+            <div class="box">
+                <div class="box_name">水民</div>
+                <div class="box_num">1号</div>
+                <div class="image-box">
+
+                    <a href=".\7-3.html" class="image-1"></a>
+                    <a href=".\7-3.html" class="image-2"></a>
+                    <a href=".\7-3.html" class="image-3"></a>
+                    <a href=".\7-3.html" class="image-4"></a>
+                </div>
+            </div>
+            <div class="box">
+                <div class="box_name">水民</div>
+                <div class="box_num">1号</div>
+                <div class="image-box">
+
+                    <a href=".\7-3.html" class="image-1"></a>
+                    <a href=".\7-3.html" class="image-2"></a>
+                    <a href=".\7-3.html" class="image-3"></a>
+                    <a href=".\7-3.html" class="image-4"></a>
+                </div>
+            </div>
+        </div>
+        <div class="main">
+            <div class="box">
+                <div class="box_name">水民</div>
+                <div class="box_num">1号</div>
+                <div class="image-box">
+
+                    <a href=".\7-3.html" class="image-1"></a>
+                    <a href=".\7-3.html" class="image-2"></a>
+                    <a href=".\7-3.html" class="image-3"></a>
+                    <a href=".\7-3.html" class="image-4"></a>
+                </div>
+            </div>
+            <div class="box">
+                <div class="box_name">水民</div>
+                <div class="box_num">1号</div>
+                <div class="image-box">
+
+                    <a href=".\7-3.html" class="image-1"></a>
+                    <a href=".\7-3.html" class="image-2"></a>
+                    <a href=".\7-3.html" class="image-3"></a>
+                    <a href=".\7-3.html" class="image-4"></a>
+                </div>
+            </div>
+            <div class="box">
+                <div class="box_name">水民</div>
+                <div class="box_num">1号</div>
+                <div class="image-box">
+
+                    <a href=".\7-3.html" class="image-1"></a>
+                    <a href=".\7-3.html" class="image-2"></a>
+                    <a href=".\7-3.html" class="image-3"></a>
+                    <a href=".\7-3.html" class="image-4"></a>
+                </div>
+            </div>
+        </div>
+        <div class="main">
+            <div class="box">
+                <div class="box_name">水民</div>
+                <div class="box_num">1号</div>
+                <div class="image-box">
+
+                    <a href=".\7-3.html" class="image-1"></a>
+                    <a href=".\7-3.html" class="image-2"></a>
+                    <a href=".\7-3.html" class="image-3"></a>
+                    <a href=".\7-3.html" class="image-4"></a>
+                </div>
+            </div>
+            <div class="box">
+                <div class="box_name">水民</div>
+                <div class="box_num">1号</div>
+                <div class="image-box">
+
+                    <a href=".\7-3.html" class="image-1"></a>
+                    <a href=".\7-3.html" class="image-2"></a>
+                    <a href=".\7-3.html" class="image-3"></a>
+                    <a href=".\7-3.html" class="image-4"></a>
+                </div>
+            </div>
+            <div class="box">
+                <div class="box_name">水民</div>
+                <div class="box_num">1号</div>
+                <div class="image-box">
+
+                    <a href=".\7-3.html" class="image-1"></a>
+                    <a href=".\7-3.html" class="image-2"></a>
+                    <a href=".\7-3.html" class="image-3"></a>
+                    <a href=".\7-3.html" class="image-4"></a>
+                </div>
+            </div>
+        </div>
+        <div class="main">
+            <div class="box">
+                <div class="box_name">水民</div>
+                <div class="box_num">1号</div>
+                <div class="image-box">
+
+                    <a href=".\7-3.html" class="image-1"></a>
+                    <a href=".\7-3.html" class="image-2"></a>
+                    <a href=".\7-3.html" class="image-3"></a>
+                    <a href=".\7-3.html" class="image-4"></a>
+                </div>
+            </div>
+            <div class="box">
+                <div class="box_name">水民</div>
+                <div class="box_num">1号</div>
+                <div class="image-box">
+
+                    <a href=".\7-3.html" class="image-1"></a>
+                    <a href=".\7-3.html" class="image-2"></a>
+                    <a href=".\7-3.html" class="image-3"></a>
+                    <a href=".\7-3.html" class="image-4"></a>
+                </div>
+            </div>
+            <div class="box">
+                <div class="box_name">水民</div>
+                <div class="box_num">1号</div>
+                <div class="image-box">
+
+                    <a href=".\7-3.html" class="image-1"></a>
+                    <a href=".\7-3.html" class="image-2"></a>
+                    <a href=".\7-3.html" class="image-3"></a>
+                    <a href=".\7-3.html" class="image-4"></a>
+                </div>
+            </div>
+        </div>
+        <div class="main">
+            <div class="box">
+                <div class="box_name">水民</div>
+                <div class="box_num">1号</div>
+                <div class="image-box">
+
+                    <a href=".\7-3.html" class="image-1"></a>
+                    <a href=".\7-3.html" class="image-2"></a>
+                    <a href=".\7-3.html" class="image-3"></a>
+                    <a href=".\7-3.html" class="image-4"></a>
+                </div>
+            </div>
+            <div class="box">
+                <div class="box_name">水民</div>
+                <div class="box_num">1号</div>
+                <div class="image-box">
+
+                    <a href=".\7-3.html" class="image-1"></a>
+                    <a href=".\7-3.html" class="image-2"></a>
+                    <a href=".\7-3.html" class="image-3"></a>
+                    <a href=".\7-3.html" class="image-4"></a>
+                </div>
+            </div>
+            <div class="box">
+                <div class="box_name">水民</div>
+                <div class="box_num">1号</div>
+                <div class="image-box">
+
+                    <a href=".\7-3.html" class="image-1"></a>
+                    <a href=".\7-3.html" class="image-2"></a>
+                    <a href=".\7-3.html" class="image-3"></a>
+                    <a href=".\7-3.html" class="image-4"></a>
+                </div>
+            </div>
+        </div>
+        <div class="main">
+            <div class="box">
+                <div class="box_name">水民</div>
+                <div class="box_num">1号</div>
+                <div class="image-box">
+
+                    <a href=".\7-3.html" class="image-1"></a>
+                    <a href=".\7-3.html" class="image-2"></a>
+                    <a href=".\7-3.html" class="image-3"></a>
+                    <a href=".\7-3.html" class="image-4"></a>
+                </div>
+            </div>
+            <div class="box">
+                <div class="box_name">水民</div>
+                <div class="box_num">1号</div>
+                <div class="image-box">
+
+                    <a href=".\7-3.html" class="image-1"></a>
+                    <a href=".\7-3.html" class="image-2"></a>
+                    <a href=".\7-3.html" class="image-3"></a>
+                    <a href=".\7-3.html" class="image-4"></a>
+                </div>
+            </div>
+            <div class="box">
+                <div class="box_name">水民</div>
+                <div class="box_num">1号</div>
+                <div class="image-box">
+
+                    <a href=".\7-3.html" class="image-1"></a>
+                    <a href=".\7-3.html" class="image-2"></a>
+                    <a href=".\7-3.html" class="image-3"></a>
+                    <a href=".\7-3.html" class="image-4"></a>
+                </div>
+            </div>
+        </div>
     </div>
+
+
+    <!-- 居中???
+    这里的边界可以用:before实现,也可以加一个空div实现 -->
+    <div class="footer">
+        <button class="bt"> <a href=".\7-3.html">投死</a> </button>
+    </div>
+
+    <!-- <embed src=".\.\pic\财富自由.mp3" type="" autostart=true hidden=ture> -->
 </body>
+
 </html>
