--- a/css学习/task8/8-1.html
+++ b/css学习/task8/8-1.html
@@ -22,7 +22,7 @@
             </div>
         </div>
         <ul class="nav nav-tabs ">
-            <li ><a href="#">首页</a></li>
+            <li class="active"><a href="#">首页</a></li>
             <li><a href="#">职业</a></li>
             <li><a href="#">推荐</a></li>
             <li><a href="#">关于</a></li>
