--- a/css学习/task8/8-1.html
+++ b/css学习/task8/8-1.html
@@ -11,32 +11,46 @@
 
     <link rel="stylesheet" href="8-1.css">
 </head>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-3 top-text">客服热线电话: 010-123-45678</div>
-            <div class="col-md-8"></div>
-            <div class="col-md-3  top-icon ">
-                <a  class="icon-1" href=""></a>
-                <a  class="icon-2" href=""></a>
-                <a  class="icon-3" href=""> </a>
-            </div>
+<div class="">
+    <div class="row">
+        <div class="col-md-3 col-xs-4 top-text">客服热线电话: 010-123-45678</div>
+        <div class="col-md-5"></div>
+        <div class="col-md-3 col-xs-6 top-icon ">
+            <a class="icon-1" href="#"></a>
+            <a class="icon-2" href=""></a>
+            <a class="icon-3" href=""> </a>
         </div>
-        <ul class="nav nav-tabs ">
-            <li class="active"><a href="#">首页</a></li>
-            <li><a href="#">职业</a></li>
-            <li><a href="#">推荐</a></li>
-            <li><a href="#">关于</a></li>
-            
-          </ul>
-        
-        <div></div>
-        <div></div>
-
     </div>
+
+    <div class="nav navbar-default ">
+        <div class="navbar-header">
+            <button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+
+            </button>
+            <a href="#" class="navbar-brand header-title">技能树
+                <!-- <span>www.jinenshu.com</span> -->
+            </a>
+        </div>
+        <div class="collapse navbar-collapse">
+            <ul class="nav navbar-nav navbar-right">
+                <li class="active"><a href="#">首页</a></li>
+                <li><a href="#">职业</a></li>
+                <li><a href="#">推荐</a></li>
+                <li><a href="#">关于</a></li>
+
+            </ul>
+        </div>
+    </div>
+
+
+
     <div></div>
     <div></div>
 
-<body>
+</div>
 
 
 
@@ -47,8 +61,9 @@
 
 
 
-    <script src="bootstrap-3.3.7-dist\jquery-3.4.1.min.js"></script>
-    <script src="bootstrap-3.3.7-dist\js\bootstrap.min.js"></script>
+
+<script src="bootstrap-3.3.7-dist\jquery-3.4.1.min.js"></script>
+<script src="bootstrap-3.3.7-dist\js\bootstrap.min.js"></script>
 </body>
 
 
