--- a/css学习/css小玩意/css小练习/动画效果.html
+++ b/css学习/css小玩意/css小练习/动画效果.html
@@ -8,10 +8,10 @@
     <style>
         div {
             text-align: center;
-            width: 100px;
+            width: 100px; /*h100 快捷键快速*/
             height: 100px;
             background-color: blue;
-            
+
             position: realtive; 
             animation: anim 5s infinite alternate;
             /* alternate 可以不用写,效果是一样的; */
