--- a/css学习/task8/8-1.html
+++ b/css学习/task8/8-1.html
@@ -11,44 +11,228 @@
 
     <link rel="stylesheet" href="8-1.css">
 </head>
-<div class="">
-    <div class="row">
-        <div class="col-md-3 col-xs-4 top-text">客服热线电话: 010-123-45678</div>
-        <div class="col-md-5"></div>
-        <div class="col-md-3 col-xs-6 top-icon ">
-            <a class="icon-1" href="#"></a>
-            <a class="icon-2" href=""></a>
-            <a class="icon-3" href=""> </a>
+<header>
+
+
+    <div class="container">
+        <!-- 基本信息 -->
+        <div class="row">
+            <div class="col-md-3 col-xs-6 top-text">客服热线电话: 010-123-45678</div>
+            <div class="col-md-5"></div>
+            <div class=" top-icon ">
+                <a class="icon-1" href="#"></a>
+                <a class="icon-2" href="#"></a>
+                <a class="icon-3" href="#"> </a>
+            </div>
         </div>
     </div>
-
+    <!-- 头部 -->
     <div class="nav navbar-default ">
-        <div class="navbar-header">
-            <button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
+        <div class="container">
+            <div class="row">
+                <div class="navbar-header">
+                    <button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
 
-            </button>
-            <a href="#" class="navbar-brand header-title">技能树
-                <!-- <span>www.jinenshu.com</span> -->
-            </a>
-        </div>
-        <div class="collapse navbar-collapse">
-            <ul class="nav navbar-nav navbar-right">
-                <li class="active"><a href="#">首页</a></li>
-                <li><a href="#">职业</a></li>
-                <li><a href="#">推荐</a></li>
-                <li><a href="#">关于</a></li>
+                    </button>
+                    <a href="#" class="navbar-brand header-title">技能树
+                        <span>www.jinshu.com</span>
+                    </a>
+                </div>
+                <div class="collapse navbar-collapse">
+                    <ul class="nav navbar-nav navbar-right">
+                        <li class="active"><a href="#">首页</a></li>
+                        <li><a href="#">职业</a></li>
+                        <li><a href="#">推荐</a></li>
+                        <li><a href="#">关于</a></li>
 
-            </ul>
+                    </ul>
+                </div>
+            </div>
         </div>
+</header>
+<!-- 轮播图 -->
+<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+
+    <ol class="carousel-indicators">
+        <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="3"></li>
+    </ol>
+
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner" role="listbox">
+        <div class="item active"><img src="./pic/bg.png"></div>
+        <div class="item "><img src="./pic/bg.png"></div>
+        <div class="item"><img src="./pic/bg.png"></div>
+
+        <div class="item"><img src="./pic/bg.png"></div>
+
     </div>
 
+    <!-- Controls -->
+    <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+
+        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+
+    </a>
+    <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+
+        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+
+    </a>
+
+</div>
+<!-- 主体 -->
+<main>
+    <div class="container">
+        <div class="row content">
 
 
-    <div></div>
-    <div></div>
+
+            <div class="col-md-3 col sm-6"><img src="./pic/rocket.png" alt="">
+                <h3>高效</h3>
+
+                <p>将五到七年,缩短到一到三年</p>
+            </div>
+            <div class="col-md-3 col sm-6"><img src="./pic/archive.png" alt="">
+                <h3>在线</h3>
+
+                <p>标准的实战教程不会走弯路</p>
+            </div>
+            <div class="col-md-3 col sm-6"><img src="./pic/Shape.png" alt="">
+                <h3>人脉</h3>
+                <p>同伴好友,同源学长,技术大师,入学就混入职脉圈,为以后铺平道路</p>
+            </div>
+            <div class="col-md-3 col sm-6 box-line">
+                <div> <img src="./pic/person.png" alt=""><span style="color: #26a26f">12400</span>
+
+                    <p>累计在线人数</p>
+                </div>
+                <div><img src="./pic/person.png" alt=""><span style="color: #26a26f">12400</span>
+
+                    <p>学院已找到工作</p>
+                </div>
+            </div>
+
+        </div>
+        <div class="row ">
+            <div class="col-md-3 col sm-6 box1">
+                <div class="round">1 </div>
+                <span class="font-color">匹配你现在的个人情况寻找适合自己的岗位</span>
+                <img src="./pic/箭头.png" alt="">
+            </div>
+            <div class="col-md-3 col sm-6 box1">
+                <div class="round">2 </div>
+                <span class="font-color">匹配你现在的个人情况寻找适合自己的岗位</span>
+                <img src="./pic/箭头.png" alt="">
+            </div>
+            <div class="col-md-3 col sm-6 box1">
+                <div class="round">3 </div>
+                <span class="font-color">匹配你现在的个人情况寻找适合自己的岗位</span>
+                <img src="./pic/箭头.png" alt="">
+            </div>
+
+            <div class="col-md-3 col sm-6 box1">
+                <div class="round">4 </div>
+                <span class="font-color">匹配你现在的个人情况寻找适合自己的岗位</span>
+                <img src="./pic/箭头.png" alt="">
+            </div>
+        </div>
+        <div class="row ">
+            <div class="col-md-3 col sm-6 box1">
+                <div class="round">5 </div>
+                <span class="font-color">匹配你现在的个人情况寻找适合自己的岗位</span>
+                <img src="./pic/箭头.png" alt="">
+            </div>
+            <div class="col-md-3 col sm-6 box1">
+                <div class="round">6 </div>
+                <span class="font-color">匹配你现在的个人情况寻找适合自己的岗位</span>
+                <img src="./pic/箭头.png" alt="">
+            </div>
+            <div class="col-md-3 col sm-6 box1">
+                <div class="round">7 </div>
+                <span class="font-color">匹配你现在的个人情况寻找适合自己的岗位</span>
+                <img src="./pic/箭头.png" alt="">
+            </div>
+            <div class="col-md-3 col sm-6 box1">
+                <div class="round">8 </div>
+                <span class="font-color">匹配你现在的个人情况寻找适合自己的岗位</span>
+                <img src="./pic/箭头.png" alt="">
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <h3 class="text-center">优秀学员展示</h3>
+        <div class="row">
+            <div class="col-md-3 col-sm-6 text-center ">
+                <div class="boxshadow">
+                    <img src="./pic/Avatar1.png" class="img-circle" alt="">
+                    <h4>技术顾问:罗大佑</h4>
+                    <p>百度技术总监：互联网基础 服务领域，
+                        从事虚拟主机、 云服务器、域名。曾任新网
+                        高级技术经理，负责技术研 发、团队管理与建设。
+                    </p>
+                </div>
+            </div>
+            <div class="col-md-3 col-sm-6 text-center ">
+                <div class="boxshadow">
+                    <img src="./pic/Avatar1.png" class="img-circle" alt="">
+                    <h4>技术顾问:罗大佑</h4>
+                    <p>百度技术总监：互联网基础 服务领域，
+                        从事虚拟主机、 云服务器、域名。曾任新网
+                        高级技术经理，负责技术研 发、团队管理与建设。
+                    </p>
+                </div>
+            </div>
+            <div class="col-md-3 col-sm-6 text-center ">
+                <div class="boxshadow">
+                    <img src="./pic/Avatar1.png" class="img-circle" alt="">
+                    <h4>技术顾问:罗大佑</h4>
+                    <p>百度技术总监：互联网基础 服务领域，
+                        从事虚拟主机、 云服务器、域名。曾任新网
+                        高级技术经理，负责技术研 发、团队管理与建设。
+                    </p>
+                </div>
+            </div>
+            <div class="col-md-3 col-sm-6 text-center ">
+                <div class="boxshadow">
+                    <img src="./pic/Avatar1.png" class="img-circle" alt="">
+                    <h4>技术顾问:罗大佑</h4>
+                    <p>百度技术总监：互联网基础 服务领域，
+                        从事虚拟主机、 云服务器、域名。曾任新网
+                        高级技术经理，负责技术研 发、团队管理与建设。
+                    </p>
+                </div>
+            </div>
+
+        </div>
+        <ul class="li-circle">
+            <li class=""> </li>
+            <li></li>
+            <li></li>
+            <li></li>
+
+        </ul>
+    </div>
+    <div class="container">
+        <div class="row"></div>
+
+    </div>
+    <div class="container">
+        <div class="row"></div>
+
+    </div>
+
+</main>
+
+
+<div></div>
+<div></div>
 
 </div>
 
