--- a/css学习/task8/8-1.html
+++ b/css学习/task8/8-1.html
@@ -219,18 +219,67 @@
 
         </ul>
     </div>
-    <div class="container">
-        <div class="row"></div>
+    <div class="container"> 
+        <h3 class="text-center">战略合作企业</h3>
+        <div class="row text-center">
+            <a class="pic-size" href="http://www.alibaba.com">
+            <img  src=".\pic\111 (1).png" alt="" >
+            </a>
+            <a class="pic-size" href="http://www.alibaba.com">
+            <img class="" src=".\pic\111 (2).png" alt="" ></a>
+            <a class="pic-size" href="http://www.alibaba.com">
+            <img class="" src=".\pic\111 (3).png" alt="" ></a>
+            <a class="pic-size" href="http://www.alibaba.com">
+            <img class="" src=".\pic\下载 (1).png" alt="" ></a>
+            <a class="pic-size" href="http://www.alibaba.com">
+            <img class="" src=".\pic\下载.png" alt="" ></a>
+        </div>
 
     </div>
     <div class="container">
-        <div class="row"></div>
+            <h3 class="text-center">友情链接</h3>
+        <div class="row">
+            <ul class="link-f">
+                <li>手机软件</li>
+                <li>教师招聘</li>
+                <li>找工作</li>
+                <li>手机软件</li>
+                <li>教师招聘</li>
+                <li>找工作</li>
+                <li>手机软件</li>
+                <li>教师招聘</li>
+                <li>找工作</li>
+                <li>手机软件</li>
+                
+                <li>找工作</li>
+            </ul>
+        </div>
 
     </div>
 
 </main>
 
 
+<footer>
+    <div class="container">
+        <div class="row bottom-box">
+            <div class="col-md-3 col sm-6"><p class="p1">技能树--改变你我</p> 
+                <p> &nbsp;</p>
+                <p class="p2">关于我们 |联席我们| 关于我们</p>
+            </div>
+            <div class="col-md-3 col sm-6"><p class="p1">旗下网站</p>
+                <p class="p2">草船云孵化器  最强IT训练营</p>
+                <p class="p2">葡萄藤轻游戏  桌游精灵</p>
+            </div>
+            <div class="col-md-3 col sm-6"></div>
+            <div class="col-md-3 col sm-6"><p class="p1">微信公众号:</p> <div>
+                <img src="./pic/qrcode.png" alt="">
+            </div> </div>
+            <hr>
+            <div class="bottom-font">Copyright © 2015技能树 www.jnshu.com All Rights Reserved | 京ICP备13005880号</div>
+        </div>
+    </div>
+</footer>
 <div></div>
 <div></div>
 
