--- a/css学习/task8/8-1-bug.html
+++ b/css学习/task8/8-1-bug.html
@@ -100,7 +100,7 @@
 
                 <p>将五到七年,缩短到一到三年</p>
             </div>
-            <div class="col-md-3 col-sm-6"><img src="./pic/rocket.png" alt="">
+            <div class="col-md-3 col-sm-6"><img src="./pic/archive.png" alt="">
                 <h3>在线</h3>
 
                 <p>标准的实战教程不会走弯路</p>
@@ -295,7 +295,8 @@
         </div>
     </div>
 </footer>
-
+<div></div>
+<div></div>
 
 </div>
 
