--- a/css学习/task8/8-test.html
+++ b/css学习/task8/8-test.html
@@ -8,7 +8,7 @@
     <!-- 注意顺序 -->
     <link rel="stylesheet" href="bootstrap-3.3.7-dist\css\bootstrap.min.css">
 
-    <link rel="stylesheet" href="8-1.css">
+    <!-- <link rel="stylesheet" href="8-1.css"> -->
 </head>
 <body>
     <div class="header"> 
