--- a/css学习/task8/8-1-bug.html
+++ b/css学习/task8/8-1-bug.html
@@ -32,7 +32,7 @@
         <div class="container">
             <div class="row">
                 <div class="navbar-header">
-                    <button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <button class="navbar-toggle" data-toggle="collapse" data-target="#task8-2">
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
@@ -42,7 +42,7 @@
                         <span>www.jinshu.com</span>
                     </a>
                 </div>
-                <div class="collapse navbar-collapse">
+                <div id="task8-2" class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
                         <li class="active"><a href="#">首页</a></li>
                         <li><a href="#">职业</a></li>
