--- a/css学习/task8/8-1.html
+++ b/css学习/task8/8-1.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>task 8-1</title>
     <!-- 注意顺序 -->
-    <link rel="stylesheet" href="bootstrap-3.3.7-dist\css\bootstrap.min.css">
+    <!-- <link rel="stylesheet" href="bootstrap-3.3.7-dist\css\bootstrap.min.css"> -->
     <link rel="stylesheet" href="media.css">
 
     <link rel="stylesheet" href="8-1.css">
@@ -44,9 +44,9 @@
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
-                        <li class="active"><a href="#">首页</a></li>
-                        <li><a href="#">职业</a></li>
-                        <li><a href="#">推荐</a></li>
+                        <li class="active"><a href=".\8-1.html">首页</a></li>
+                        <li><a href=".\8-3.html">职业</a></li>
+                        <li><a href=".\8-2.html">推荐</a></li>
                         <li><a href="#">关于</a></li>
 
                     </ul>
@@ -54,6 +54,7 @@
             </div>
         </div>
 </header>
+
 <!-- 轮播图 -->
 <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
