--- a/css学习/task8/8-1.html
+++ b/css学习/task8/8-1.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>task 8-1</title>
     <!-- 注意顺序 -->
-    <!-- <link rel="stylesheet" href="bootstrap-3.3.7-dist\css\bootstrap.min.css"> -->
+    <link rel="stylesheet" href="bootstrap-3.3.7-dist\css\bootstrap.min.css">
     <link rel="stylesheet" href="media.css">
 
     <link rel="stylesheet" href="8-1.css">
@@ -310,12 +310,13 @@
 
 
 
-<script src="bootstrap-3.3.7-dist\jquery-3.4.1.min.js"></script>
-<script src="bootstrap-3.3.7-dist\js\bootstrap.min.js"></script>
+
 </body>
 
 
+<script src="bootstrap-3.3.7-dist\jquery-3.4.1.min.js"></script>
 
+<script src="bootstrap-3.3.7-dist\js\bootstrap.min.js"></script>
 
 
 
