--- a/css学习/task8/8-3.html
+++ b/css学习/task8/8-3.html
@@ -44,9 +44,9 @@
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
-                        <li class="active"><a href="#">首页</a></li>
-                        <li><a href="#">职业</a></li>
-                        <li><a href="#">推荐</a></li>
+                        <li class="active"><a href=".\8-1.html">首页</a></li>
+                        <li><a href=".8-3.html">职业</a></li>
+                        <li><a href=".8-2.html">推荐</a></li>
                         <li><a href="#">关于</a></li>
 
                     </ul>
