--- a/css学习/task10/task10.html
+++ b/css学习/task10/task10.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>登录界面</title>
-    <link rel="stylesheet" href="style4.css">
+    <title>task10 less</title>
+    <link rel="stylesheet" href="task10.css">
+    
 </head>
 <body>
     <div class="header">
@@ -16,16 +17,19 @@
     </div>
     <div class="mian">
         <div class="phone">
-            <img src=".\pic\01.png" alt="">
+            <img src="pic\01.png" alt="">
             <input  placeholder="请输入手机号" type="text">
         </div>
-        <div class="pwd">
-            <img src=".\pic\02.png" alt="">
+        <div class="phone">
+            <img src="pic\02.png" alt="">
             <input  placeholder="请输入密码" type="password">
         </div>
     </div>
     <button class="load">登 &nbsp;录</button>
-    <div class="footer"><a class="mima" href="#">忘记密码</a></div>
+    <a class="mima" href="#">忘记密码</a>
     
 </body>
+
+<link rel="stylesheet/less" href="task10.less">
+<script src="//cdnjs.cloudflare.com/ajax/libs/less.js/3.9.0/less.min.js" ></script>
 </html>
