--- a/css学习/task8/8-1.html
+++ b/css学习/task8/8-1.html
@@ -131,40 +131,41 @@
             </div>
             <div class="col-md-3 col-sm-6 box1">
                 <div class="round">2 </div>
-                <span class="font-color">匹配你现在的个人情况寻找适合自己的岗位</span>
+                <span class="font-color">了解职业前景薪金待遇、竞争压力等</span>
                 <img src="./pic/箭头.png" alt="">
             </div>
             <div class="col-md-3 col-sm-6 box1">
                 <div class="round">3 </div>
-                <span class="font-color">匹配你现在的个人情况寻找适合自己的岗位</span>
+                <span class="font-color">掌握行业内顶级技能</span>
                 <img src="./pic/箭头.png" alt="">
             </div>
 
             <div class="col-md-3 col-sm-6 box1">
                 <div class="round">4 </div>
-                <span class="font-color">匹配你现在的个人情况寻找适合自己的岗位</span>
+                <span class="font-color">查看职业目标任务</span>
                 <img src="./pic/箭头.png" alt="">
             </div>
         </div>
         <div class="row ">
             <div class="col-md-3 col-sm-6 box1">
                 <div class="round">5 </div>
-                <span class="font-color">匹配你现在的个人情况寻找适合自己的岗位</span>
+                <span class="font-color">参考学习资源，掌握 技能点，逐个完成任务</span>
                 <img src="./pic/箭头.png" alt="">
             </div>
             <div class="col-md-3 col-sm-6 box1">
                 <div class="round">6 </div>
-                <span class="font-color">匹配你现在的个人情况寻找适合自己的岗位</span>
+                <span class="font-color">
+                        加入班级，和小伙伴们 互帮互助，一块学习</span>
                 <img src="./pic/箭头.png" alt="">
             </div>
             <div class="col-md-3 col-sm-6 box1">
                 <div class="round">7 </div>
-                <span class="font-color">匹配你现在的个人情况寻找适合自己的岗位</span>
+                <span class="font-color">选择导师，一路引导， 加速自己成长</span>
                 <img src="./pic/箭头.png" alt="">
             </div>
             <div class="col-md-3 col-sm-6 box1">
                 <div class="round">8 </div>
-                <span class="font-color">匹配你现在的个人情况寻找适合自己的岗位</span>
+                <span class="font-color">完成职业技能，升 级业界大牛</span>
                 <img src="./pic/箭头.png" alt="">
             </div>
         </div>
@@ -280,16 +281,16 @@
 <footer>
     <div class="container">
         <div class="row bottom-box">
-            <div class="col-md-3 col sm-6"><p class="p1">技能树--改变你我</p> 
+            <div class="col-md-3 col-sm-6"><p class="p1">技能树--改变你我</p> 
                 <p> &nbsp;</p>
                 <p class="p2">关于我们 |联席我们| 关于我们</p>
             </div>
-            <div class="col-md-3 col sm-6"><p class="p1">旗下网站</p>
-                <p class="p2">草船云孵化器  最强IT训练营</p>
-                <p class="p2">葡萄藤轻游戏  桌游精灵</p>
+            <div class="col-md-3 col-sm-6"><p class="p1">旗下网站</p>
+                <p class="p2"><span>草船云孵化器 </span>&emsp;<span> 最强IT训练营</span></p>
+                <p class="p2"><span>葡萄藤轻游戏 </span>&emsp;<span> 桌游精灵</span> </p>
             </div>
-            <div class="col-md-3 col sm-6"></div>
-            <div class="col-md-3 col sm-6"><p class="p1">微信公众号:</p> <div>
+            <div class="col-md-3 col-sm-6"></div>
+            <div class="col-md-3 col-sm-6"><p class="p1">微信公众号:</p> <div>
                 <img src="./pic/qrcode.png" alt="">
             </div> </div>
             <hr>
