--- a/love/index.html
+++ b/love/index.html
@@ -31,7 +31,6 @@
 </head>
 
 <body>
-	//这个地方有些不懂
 	<div class="flowtime">
 		<div class="ft-section section-1" data-id="section-1">
 			<div id="/section-1/page-1" class="ft-page page-1" data-id="page-1">
@@ -286,7 +285,7 @@
 					你喜欢的人的名字
 					<spen id="dianwo">我们在一起吧</spen><br>
 
-					<spen id="fr">from:你的名字</spen><br>
+					<spen id="fr">清林</spen><br>
 
 
 				</p>
@@ -296,7 +295,8 @@
 
 
 
-	<!-- <audio  src="music/123.mp3" preload="auto" type="audio/mp3" autoplay loop></audio> -->
+	<!-- <audio controls src="music/123.mp3" preload="auto" type="audio/mp3" autoplay loop></audio> -->
+	<!-- <video controls src="music/123.mp3" preload="auto" type="audio/mp3" autoplay loop></video> -->
 	<embed src="music/123.mp3" width="10" height="10"></embed>
 
 	<script src="http://libs.baidu.com/jquery/1.8.3/jquery.min.js"></script>
