--- a/love/index.html
+++ b/love/index.html
@@ -1,19 +1,6 @@
 ﻿<!DOCTYPE HTML>
 
-<!--[if IE 6]>
-<html id="ie6" class="ie ie6 lt-ie9">
-<![endif]-->
-<!--[if IE 7]>
-<html id="ie7" class="ie ie7 lt-ie9">
-<![endif]-->
-<!--[if IE 8]>
-<html id="ie8" class="ie ie8 lt-ie9">
-<![endif]-->
-<!--[if gte IE 9]>
-<html class="ie ie9">
-<![endif]-->
-<!--[if !(IE)]><!-->
-<html lang="en">
+<html lang="zh">
 
 <head>
 
@@ -27,7 +14,7 @@
 	<link rel="stylesheet" href="js/love.src.js">
 
 
-	<title>I think I'm going to confess now</title>
+	<title>💘清林我喜欢你💘</title>
 	<link rel="stylesheet" href="css/all.min.css">
 </head>
 
