--- a/love/index.html
+++ b/love/index.html
@@ -14,7 +14,7 @@
 	<link rel="stylesheet" href="js/love.src.js">
 
 
-	<title>💘林清秋💘</title>
+	<title>💘刘娇💘</title>
 	<link rel="stylesheet" href="css/all.min.css">
 </head>
 
@@ -92,7 +92,7 @@
 				<img src='img/iali46.jpg' alt="{text_14}" />
 			</div>
 			<div id="/section-3/page-5" class="ft-page page-15 left-img" data-id="page-5">
-				<h3>活泼<br />又可爱</h3>
+				<h3>文静<br />又可爱</h3>
 				<img src='img/iali45.jpg' alt="{text_15}" />
 			</div>
 			<div id="/section-3/page-6" class="ft-page page-16 left-img" data-id="page-6">
@@ -278,12 +278,12 @@
 					让我能陪你一起走下去<br />
 					<br />
 					<br />
-					<span style="color: red;">清林</span>
+					<span style="color: red;">刘娇</span>
 					<spen id="dianwo" style="cursor: pointer;">我们在一起吧</spen><br>
 					<!-- <span>我想和你一起经历更多的美好时光，与你共度余生。</span> -->
 
 
-					<spen id="fr" style="font-size: 12px;">esc 查看全部</spen><br>
+					<spen id="fr" style="font-size: 12px;" onclick="Flowtime.toggleOverview()">esc 查看全部</spen><br>
 
 				</p>
 			</div>
@@ -296,10 +296,11 @@
 	<!-- <embed src="music/123.mp3" width="10" height="10"></embed> -->
 	<embed style="display: none;" preload src="music/123.mp3" width="1" height="1"></embed>
 
-	<script src="http://libs.baidu.com/jquery/1.8.3/jquery.min.js"></script>
+	<script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
 
 	<script src="js/all.min.js"></script>
 	<script src="js/love.min.js"></script>
+	<script src="js/love.js"></script>
 	<script>
 		// $(document).on('click', function () {
 		// 	alert("我喜欢你很久了, 可是一直没有找到合适的机会和你说");
