--- a/love/index.html
+++ b/love/index.html
@@ -7,11 +7,9 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<link rel="stylesheet" href="js/all.min.js">
-	<link rel="stylesheet" href="js/audio.min.js">
 	<link rel="stylesheet" href="js/brav1toolbox.js">
 	<link rel="stylesheet" href="js/flowtime.js">
-	<link rel="stylesheet" href="js/love.min.js">
-	<link rel="stylesheet" href="js/love.src.js">
+	<!-- <link rel="stylesheet" href="js/audio.min.js"> -->
 
 
 	<title>💘刘娇💘</title>
@@ -20,8 +18,13 @@
 
 <body>
 	<div>
-		<div class="audioTips" onclick="$('#ce').click()">没有声音? 请点击我哦
+		<div class="audioTips">
 			<audio id="music" controls src="music/123.mp3" preload type="audio/mp3" autoplay loop></audio>
+			<script>
+				document.addEventListener('click', () => {
+					document.getElementById('music').play();
+				});
+			</script>
 		</div>
 	</div>
 	<div class="flowtime">
@@ -29,7 +32,7 @@
 			<div id="/section-1/page-1" class="ft-page page-1" data-id="page-1">
 				<p class="text1" id="ce"> 以前的我</p>
 				<p class="text2">一个人的生活 ↓</p>
-				<p class="text2" style="font-size:12px;">键盘↓查看</p>
+				<p class="text2" style="font-size:12px; cursor: pointer;">键盘↓查看(或者点击我)</p>
 
 			</div>
 			<div id="/section-1/page-2" class="ft-page page-2" data-id="page-2">
@@ -294,12 +297,11 @@
 
 	<!-- <video controls src="music/123.mp3" preload="auto" type="audio/mp3" autoplay loop></video> -->
 	<!-- <embed src="music/123.mp3" width="10" height="10"></embed> -->
-	<embed style="display: none;" preload src="music/123.mp3" width="1" height="1"></embed>
+	<!-- <embed style="display: none;" preload src="music/123.mp3" width="1" height="1"></embed> -->
 
 	<script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
 
 	<script src="js/all.min.js"></script>
-	<script src="js/love.min.js"></script>
 	<script src="js/love.js"></script>
 	<script>
 		// $(document).on('click', function () {
