--- a/love/index.html
+++ b/love/index.html
@@ -20,7 +20,7 @@
 <body>
 	<div>
 		<div class="audioTips">
-			<!-- <audio id="music" controls src="music/123.mp3" preload type="audio/mp3" autoplay loop></audio> -->
+			<audio id="music" controls src="music/123.mp3" preload type="audio/mp3" autoplay loop></audio>
 			<script>
 				let isPlay = false
 
