--- a/love/index.html
+++ b/love/index.html
@@ -32,8 +32,14 @@
 					isPlay = true
 					document.getElementById('music').play();
 				}
-
 				document.addEventListener('click', autoPlay);
+			</script>
+			<!-- 支持微信环境 -->
+			<script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
+			<script>
+				document.addEventListener('WeixinJSBridgeReady', () => {
+					document.getElementById('music').play();
+				});
 			</script>
 		</div>
 	</div>
@@ -46,245 +52,245 @@
 					键盘↓查看(或者点击我)</p>
 
 			</div>
-			<div id="/section-1/page-2" class="ft-page page-2" data-id="page-2">
+			<div id="/section-1/page-2" class="ft-page page-2" data-id="page-2" data-title="娇娇">
 				<p class="top-text">一个人喝冷饮。</p>
 				<img src='img/iali63.jpg' alt="{text_1}" />
 			</div>
-			<div id="/section-1/page-3" class="ft-page page-3 left-img" data-id="page-3">
+			<div id="/section-1/page-3" class="ft-page page-3 left-img" data-id="page-3" data-title="娇娇">
 				<h2 class="text">一个人走路。</h2>
 				<img src='img/iali35.jpg' alt="{text_2}" />
 			</div>
-			<div id="/section-1/page-4" class="ft-page page-4 full-img" data-id="page-4">
+			<div id="/section-1/page-4" class="ft-page page-4 full-img" data-id="page-4" data-title="娇娇">
 				<h2 class="center-text">一个人，瞭望远方。</h2>
 				<img src='img/iali6.jpg' alt="{text_3}" />
 			</div>
 		</div>
 		<div class="ft-section section-2" data-id="section-2">
-			<div id="/section-2/page-1" class="ft-page page-5 full-img" data-id="page-1">
+			<div id="/section-2/page-1" class="ft-page page-5 full-img" data-id="page-1" data-title="娇娇">
 				<h2 class="center-text">一个人坐地铁</h2>
 				<img src='img/iali19.jpg' alt="{text_4}" />
 			</div>
-			<div id="/section-2/page-2" class="ft-page page-6" data-id="page-2">
+			<div id="/section-2/page-2" class="ft-page page-6" data-id="page-2" data-title="娇娇">
 				<h2 class="center-text">一个人发呆</h2>
 				<img src='img/iali29.jpg' alt="{text_5}" />
 			</div>
-			<div id="/section-2/page-3" class="ft-page page-7" data-id="page-3">
+			<div id="/section-2/page-3" class="ft-page page-7" data-id="page-3" data-title="娇娇">
 				<h3 id="w3"> 我渴望<br>那么一个人</h3>
 				<img src='img/iali60.jpg' alt="{text_6}" />
 			</div>
-			<div id="/section-2/page-4" class="ft-page page-8 full-img" data-id="page-4">
+			<div id="/section-2/page-4" class="ft-page page-8 full-img" data-id="page-4" data-title="娇娇">
 				<h3>一起陪我
 					<div>度过余生的日子。</div>
 				</h3>
 
 				<img src='img/iali51.jpg' alt="{text_7}" />
 			</div>
-			<div id="/section-2/page-5" class="ft-page page-9" data-id="page-5">
+			<div id="/section-2/page-5" class="ft-page page-9" data-id="page-5" data-title="娇娇">
 				<h3>只要你愿意</h3>
 				<img src='img/iali5.jpg' alt="{text_8}" />
 			</div>
-			<div id="/section-2/page-6" class="ft-page page-10" data-id="page-6">
+			<div id="/section-2/page-6" class="ft-page page-10" data-id="page-6" data-title="娇娇">
 				<h3>我想带你去。。。</h3>
 				<img src='img/iali22.jpg' alt="{text_9}" />
 			</div>
 		</div>
 		<div class="ft-section section-3" data-id="section-3">
-			<div id="/section-3/page-1" class="ft-page page-11 full-img" data-id="page-1">
+			<div id="/section-3/page-1" class="ft-page page-11 full-img" data-id="page-1" data-title="娇娇">
 				<h3>任何你想去的地方</h3>
 				<img src='img/iali24.jpg' alt="{text_10}" />
 			</div>
-			<div id="/section-3/page-2" class="ft-page page-12" data-id="page-2">
+			<div id="/section-3/page-2" class="ft-page page-12" data-id="page-2" data-title="娇娇">
 				<h3>陪着你<br /></h3>
 				<img src='img/iali25.jpg' alt="{text_11}" />
 			</div>
-			<div id="/section-3/page-3" class="ft-page page-13" data-id="page-3">
+			<div id="/section-3/page-3" class="ft-page page-13" data-id="page-3" data-title="娇娇">
 				<img src='img/iali64.jpg' alt='{text_13}' />
 				<h3>你做你想做的事</h3>
 			</div>
-			<div id="/section-3/page-4" class="ft-page page-14 left-img" data-id="page-4">
+			<div id="/section-3/page-4" class="ft-page page-14 left-img" data-id="page-4" data-title="娇娇">
 				<h3>你是一个</h3>
 				<img src='img/iali46.jpg' alt="{text_14}" />
 			</div>
-			<div id="/section-3/page-5" class="ft-page page-15 left-img" data-id="page-5">
+			<div id="/section-3/page-5" class="ft-page page-15 left-img" data-id="page-5" data-title="娇娇">
 				<h3>文静<br />又可爱</h3>
 				<img src='img/iali45.jpg' alt="{text_15}" />
 			</div>
-			<div id="/section-3/page-6" class="ft-page page-16 left-img" data-id="page-6">
+			<div id="/section-3/page-6" class="ft-page page-16 left-img" data-id="page-6" data-title="娇娇">
 				<h3>天真无邪的女孩纸</h3>
 				<img src='img/iali66.jpg' alt="{text_17}" />
 			</div>
-			<div id="/section-3/page-7" class="ft-page page-17 top-text" data-id="page-7">
+			<div id="/section-3/page-7" class="ft-page page-17 top-text" data-id="page-7" data-title="娇娇">
 				<h3>我想陪着你</h3>
 				<img src='img/iali16.jpg' alt="{text_19}" />
 			</div>
 		</div>
 		<div class="ft-section section-4" data-id="section-4">
-			<div id="/section-4/page-1" class="ft-page page-18 full-img" data-id="page-1">
+			<div id="/section-4/page-1" class="ft-page page-18 full-img" data-id="page-1" data-title="娇娇">
 				<p class="text">一起开心</p>
 				<img src='img/iali11.jpg' alt="{text_20}" />
 			</div>
-			<div id="/section-4/page-2" class="ft-page page-19" data-id="page-2">
+			<div id="/section-4/page-2" class="ft-page page-19" data-id="page-2" data-title="娇娇">
 				<h3>一起打闹</h3>
 				<img src="img/iali75.jpg" alt="{text_21}" />
 			</div>
-			<div id="/section-4/page-3" class="ft-page page-20" data-id="page-3">
+			<div id="/section-4/page-3" class="ft-page page-20" data-id="page-3" data-title="娇娇">
 				<img src='img/iali59.png' alt="{text_22}" />
 				<h3>你的出现</h3>
 				<img src='img/iali9.jpg' />
 			</div>
-			<div id="/section-4/page-4" class="ft-page page-21" data-id="page-4">
+			<div id="/section-4/page-4" class="ft-page page-21" data-id="page-4" data-title="娇娇">
 				<h3>是美丽的意外</h3>
 				<img src='img/iali59.png' alt="{text_23}" />
 			</div>
-			<div id="/section-4/page-5" class="ft-page page-22 left-img" data-id="page-5">
+			<div id="/section-4/page-5" class="ft-page page-22 left-img" data-id="page-5" data-title="娇娇">
 				<h3>虽然时间不长</h3>
 				<img src='img/iali4.jpg' alt="{text_24}" />
 			</div>
-			<div id="/section-4/page-6" class="ft-page page-23 left-img" data-id="page-6">
+			<div id="/section-4/page-6" class="ft-page page-23 left-img" data-id="page-6" data-title="娇娇">
 				<h3>却让我感觉</h3>
 				<img src='img/iali44.jpg' alt="{text_25}" />
 			</div>
-			<div id="/section-4/page-7" class="ft-page page-24 full-img" data-id="page-7">
+			<div id="/section-4/page-7" class="ft-page page-24 full-img" data-id="page-7" data-title="娇娇">
 				<h3>那么熟悉</h3>
 				<img src='img/iali32.jpg' alt="{text_26}" />
 			</div>
 		</div>
 		<div class="ft-section section-5" data-id="section-5">
-			<div id="/section-5/page-1" class="ft-page page-25 left-img" data-id="page-1">
+			<div id="/section-5/page-1" class="ft-page page-25 left-img" data-id="page-1" data-title="娇娇">
 				<h3>我很开心</h3>
 				<img src='img/iali37.jpg' alt="{text_27}" />
 			</div>
-			<div id="/section-5/page-2" class="ft-page page-26 top-text" data-id="page-2">
+			<div id="/section-5/page-2" class="ft-page page-26 top-text" data-id="page-2" data-title="娇娇">
 				<h3>无论如何</h3>
 				<img src='img/iali10.gif' alt="{text_29}" />
 			</div>
-			<div id="/section-5/page-3" class="ft-page page-27" data-id="page-3">
+			<div id="/section-5/page-3" class="ft-page page-27" data-id="page-3" data-title="娇娇">
 				<h3>我都会支持你</h3>
 				<img src='img/iali67.jpg' alt="{text_30}" />
 			</div>
-			<div id="/section-5/page-4" class="ft-page page-28" data-id="page-4">
+			<div id="/section-5/page-4" class="ft-page page-28" data-id="page-4" data-title="娇娇">
 				<h3>保护你</h3>
 				<img src='img/iali40.jpg' alt="{text_31}" />
 			</div>
-			<div id="/section-5/page-5" class="ft-page page-29" data-id="page-5">
+			<div id="/section-5/page-5" class="ft-page page-29" data-id="page-5" data-title="娇娇">
 				<h3>在今后的日子</h3>
 				<img src='img/iali12.jpg' alt="{text_32}" />
 			</div>
-			<div id="/section-5/page-6" class="ft-page page-30" data-id="page-6">
+			<div id="/section-5/page-6" class="ft-page page-30" data-id="page-6" data-title="娇娇">
 				<h3>我唯一确定的</h3>
 				<img src='img/iali76.gif' alt="{text_33}" />
 			</div>
-			<div id="/section-5/page-7" class="ft-page page-31" data-id="page-7">
+			<div id="/section-5/page-7" class="ft-page page-31" data-id="page-7" data-title="娇娇">
 				<h3>是珍惜你</h3>
 				<img src='img/iali77.jpg' alt="{text_34}" />
 			</div>
 		</div>
 		<div class="ft-section section-6" data-id="section-6">
-			<div id="/section-6/page-1" class="ft-page page-32" data-id="page-1">
+			<div id="/section-6/page-1" class="ft-page page-32" data-id="page-1" data-title="娇娇">
 				<h3>你开心</h3>
 				<img src='img/iali62.jpg' alt="{text_35}" />
 			</div>
-			<div id="/section-6/page-2" class="ft-page page-33 top-text" data-id="page-2">
+			<div id="/section-6/page-2" class="ft-page page-33 top-text" data-id="page-2" data-title="娇娇">
 				<h3>我就会开心</h3>
 				<img src='img/iali3.jpg' alt="{text_36}" />
 			</div>
-			<div id="/section-6/page-3" class="ft-page page-34 left-img" data-id="page-3">
+			<div id="/section-6/page-3" class="ft-page page-34 left-img" data-id="page-3" data-title="娇娇">
 				<h3>从认识你那一刻</h3>
 			</div>
-			<div id="/section-6/page-4" class="ft-page page-35" data-id="page-4">
+			<div id="/section-6/page-4" class="ft-page page-35" data-id="page-4" data-title="娇娇">
 				<h3>我一直是<br />那么快乐</h3>
 				<img src='img/iali8.gif' alt="{text_38}" />
 			</div>
-			<div id="/section-6/page-5" class="ft-page page-36 full-img" data-id="page-5">
+			<div id="/section-6/page-5" class="ft-page page-36 full-img" data-id="page-5" data-title="娇娇">
 				<h3>如果有一天</h3>
 				<img src='img/iali31.jpg' alt="{text_41}" />
 			</div>
-			<div id="/section-6/page-6" class="ft-page page-37 left-img" data-id="page-6">
+			<div id="/section-6/page-6" class="ft-page page-37 left-img" data-id="page-6" data-title="娇娇">
 				<h3>你不开心的话</h3>
 				<img src='img/iali49.jpg' alt="{text_42}" />
 			</div>
-			<div id="/section-6/page-7" class="ft-page page-38 bottom-text" data-id="page-7">
+			<div id="/section-6/page-7" class="ft-page page-38 bottom-text" data-id="page-7" data-title="娇娇">
 				<img src='img/iali21.jpg' alt="{text_43}" />
 				<h3>你就欺负我好了</h3>
 			</div>
 		</div>
 		<div class="ft-section section-7" data-id="section-7">
-			<div id="/section-7/page-1" class="ft-page page-39 left-img" data-id="page-1">
+			<div id="/section-7/page-1" class="ft-page page-39 left-img" data-id="page-1" data-title="娇娇">
 				<h3>反正我喜欢你</h3>
 				<img src='img/iali2.jpg' alt="{text_44}" />
 			</div>
-			<div id="/section-7/page-2" class="ft-page page-40" data-id="page-2">
+			<div id="/section-7/page-2" class="ft-page page-40" data-id="page-2" data-title="娇娇">
 				<h3>我可以</h3>
 				<img src='img/iali14.jpg' alt="{text45_}" />
 			</div>
-			<div id="/section-7/page-3" class="ft-page page-41" data-id="page-3">
+			<div id="/section-7/page-3" class="ft-page page-41" data-id="page-3" data-title="娇娇">
 				<img src='img/iali30_1.jpg' class='img1' alt="{text_46}" />
 				<img src='img/iali30_2.jpg' class='img2' alt="{text_46}2" />
 				<h3>不吃饭</h3>
 			</div>
-			<div id="/section-7/page-4" class="ft-page page-42" data-id="page-4">
+			<div id="/section-7/page-4" class="ft-page page-42" data-id="page-4" data-title="娇娇">
 				<h3>不睡觉</h3>
 				<img src='img/iali69.jpg' alt="{text_47}" />
 			</div>
-			<div id="/section-7/page-5" class="ft-page page-43" data-id="page-5">
+			<div id="/section-7/page-5" class="ft-page page-43" data-id="page-5" data-title="娇娇">
 				<img src='img/iali42.jpg' alt="{text_49}" />
 				<h3>不听音乐</h3>
 			</div>
-			<div id="/section-7/page-6" class="ft-page page-44 left-img" data-id="page-6">
+			<div id="/section-7/page-6" class="ft-page page-44 left-img" data-id="page-6" data-title="娇娇">
 				<h3>不打游戏</h3>
 				<img src='img/iali0.jpg' alt="{text_50}" />
 			</div>
-			<div id="/section-7/page-7" class="ft-page page-45 left-img" data-id="page-7">
+			<div id="/section-7/page-7" class="ft-page page-45 left-img" data-id="page-7" data-title="娇娇">
 				<h3>但我不能</h3>
 				<img src='img/iali18.jpg' alt="{text_52}" />
 			</div>
 		</div>
 		<div class="ft-section section-8" data-id="section-8">
-			<div id="/section-8/page-1" class="ft-page page-46" data-id="page-1">
+			<div id="/section-8/page-1" class="ft-page page-46" data-id="page-1" data-title="娇娇">
 				<img src='img/iali57.gif' alt="{text_54}" />
 				<h3>
 					不想你
 				</h3>
 			</div>
-			<div id="/section-8/page-2" class="ft-page page-47 top-text" data-id="page-2">
+			<div id="/section-8/page-2" class="ft-page page-47 top-text" data-id="page-2" data-title="娇娇">
 				<img src='img/iali58.jpg' alt="{text_58}" />
 				<h3>
 					不念你
 				</h3>
 			</div>
-			<div id="/section-8/page-3" class="ft-page page-48 left-img" data-id="page-3">
+			<div id="/section-8/page-3" class="ft-page page-48 left-img" data-id="page-3" data-title="娇娇">
 				<p>不能不<br>不喜欢你</p>
 				<img src='img/iali65.jpg' alt="{text_62}" />
 			</div>
-			<div id="/section-8/page-4" class="ft-page page-49 full-img" data-id="page-4">
+			<div id="/section-8/page-4" class="ft-page page-49 full-img" data-id="page-4" data-title="娇娇">
 				<p class='text'>这些话<br>大部分</p>
 
 				<img src='img/iali71.jpg' alt="{text_64}" />
 			</div>
-			<div id="/section-8/page-5" class="ft-page page-50" data-id="page-5">
+			<div id="/section-8/page-5" class="ft-page page-50" data-id="page-5" data-title="娇娇">
 				<p class='text'>是找的</p>
 				<img src='img/iali50_1.jpg' class='img1' alt="{text_66}" />
 				<img src='img/iali50_2.jpg' class='img2' alt="{text_66}2" />
 			</div>
-			<div id="/section-8/page-6" class="ft-page page-51" data-id="page-6">
+			<div id="/section-8/page-6" class="ft-page page-51" data-id="page-6" data-title="娇娇">
 				<p>
 					但是~！！
 				</p>
 			</div>
 		</div>
 		<div class="ft-section section-9" data-id="section-9">
-			<div id="/section-9/page-1" class="ft-page page-52 full-img" data-id="page-1">
+			<div id="/section-9/page-1" class="ft-page page-52 full-img" data-id="page-1" data-title="娇娇">
 				<h3>我喜欢你</h3>
 				<img src='img/iali20.jpg' alt="{text_71}" />
 			</div>
-			<div id="/section-9/page-2" class="ft-page page-53" data-id="page-2">
+			<div id="/section-9/page-2" class="ft-page page-53" data-id="page-2" data-title="娇娇">
 				<img src='img/iali68.jpg' alt="{text_72}" />
 				<h3>是真的</h3>
 			</div>
-			<div id="/section-9/page-3" class="ft-page page-54 center-img" data-id="page-3">
+			<div id="/section-9/page-3" class="ft-page page-54 center-img" data-id="page-3" data-title="娇娇">
 				<div class="center-img">I love you</div>
 			</div>
-			<div id="/section-9/page-4" class="ft-page page-55 right-img" data-id="page-4">
+			<div id="/section-9/page-4" class="ft-page page-55 right-img" data-id="page-4" data-title="娇娇">
 				<img src='img/14915.jpg' alt="{text_73}" />
 				<p class="text">
 					我希望与你<br />
