--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>一封信</title>
+	<title>💌一封信💌</title>
 	<style>
 		body {
 			font-family: Arial, sans-serif;
@@ -13,6 +13,7 @@
 
 		.content {
 			/* width: 500px; */
+			padding-bottom: 66px;
 		}
 
 		#text {
@@ -24,6 +25,55 @@
 		#look {
 			cursor: pointer;
 		}
+
+		.btn-ripple {
+			padding: 18px 45px;
+			background: #6347ff;
+			border: none;
+			border-radius: 12px;
+			color: white;
+			position: relative;
+			overflow: hidden;
+			transition: 0.4s;
+			position: fixed;
+			left: 50%;
+			bottom: 2%;
+			transform: translate(-50%);
+			width: 50%;
+		}
+
+		.btn-ripple span {
+			position: relative;
+			z-index: 1;
+		}
+
+		.btn-ripple::after {
+			content: '';
+			position: absolute;
+			width: 100px;
+			height: 100px;
+			background: rgba(255, 255, 255, 0.4);
+			border-radius: 50%;
+			transform: translate(-50%, -50%) scale(0);
+			animation: ripple 1s ease-out;
+			opacity: 0;
+		}
+
+		@keyframes ripple {
+			from {
+				transform: translate(-50%, -50%) scale(0);
+				opacity: 1;
+			}
+
+			to {
+				transform: translate(-50%, -50%) scale(3);
+				opacity: 0;
+			}
+		}
+
+		.btn-ripple:active::after {
+			animation: ripple 0.6s;
+		}
 	</style>
 </head>
 
@@ -33,29 +83,49 @@
 		<h1>一封信</h1>
 		<div id="text"></div>
 
-		<div id="look">点击查看</div>
+		<div id="look" class="btn-ripple" style="display: none;" title="点我点我~">查看更多</div>
 	</div>
 
 	<script>
-		const text = `娇娇，我会牵着你的手，走到满头白发的那一天，
-我会守护你生命里的精彩，并陪伴你一路精彩下去。
-你的幸福快乐，是我一生的追求。
-我会每一天带着笑脸，和你说早安，
-我会每一晚与你道声晚安再入梦乡，
-我会带你去所有你想去的地方，
-陪你闹看你笑
-历经你生命中所有的点点滴滴。
-我期待这一生与你一起走过，
-我期待与你慢慢变老
-等我们老到哪儿也去不了，
-还能满载着一生的幸福快乐 ！
+		const text = `娇娇，很高兴认识你，
+虽然与你相处的时间不是很久,
+但是你是我人生中的许多第一次;
+第一次给女孩子送花,
+第一次给女孩子买吃的,
+第一次与女孩子深夜畅聊...
+我开始慢慢了解你的喜好,
+你的习惯,
+注意着你的一举一动;
+会在发呆的时候想着你,
+想着你在干嘛;
+在深夜,我们彼此述说着自己的一些想法;
+每次看到你说对未知的害怕与胆小,
+想象着那有点小怂又可爱的样子,
+我真想把你抱入怀中,捏捏你的小脸;
+你的出现, 给我的生活带来了色彩,
+不在同以往的那样单调;
+我希望与你这般的第一次可以一直延续下去,
+带着你走遍这世间的山海,
+踏过这一路的坎坷`;
+		// 		const text = `娇娇，我会牵着你的手，走到满头白发的那一天，
+		// 我会守护你生命里的精彩，并陪伴你一路精彩下去。
+		// 你的幸福快乐，是我一生的追求。
+		// 我会每一天带着笑脸，和你说早安，
+		// 我会每一晚与你道声晚安再入梦乡，
+		// 我会带你去所有你想去的地方，
+		// 陪你闹看你笑
+		// 历经你生命中所有的点点滴滴。
+		// 我期待这一生与你一起走过，
+		// 我期待与你慢慢变老
+		// 等我们老到哪儿也去不了，
+		// 还能满载着一生的幸福快乐 ！
 
-我会为我们的未来撑起一片天空，
-为我们的将来担负起一生的责任，
-愿意为你去做每一件能让你开心快乐的事。
-所有我们经历的点点滴滴，
-都是我们一辈子最美的回忆。
-我愿意爱你直到老去！`;
+		// 我会为我们的未来撑起一片天空，
+		// 为我们的将来担负起一生的责任，
+		// 愿意为你去做每一件能让你开心快乐的事。
+		// 所有我们经历的点点滴滴，
+		// 都是我们一辈子最美的回忆。
+		// 我愿意爱你直到老去！`;
 
 		let index = 0;
 		const speed = 200; // 控制打字速度
@@ -65,15 +135,36 @@
 				document.getElementById('text').innerHTML += text.charAt(index);
 				index++;
 				setTimeout(typeWriter, speed);
+
+
+			} else {
+				const dom = document.querySelector('#look')
+				dom.style.display = ''
 			}
+			const content = document.querySelector('.content')
+			autoScrollToBottom(content)
 		}
 
-		// typeWriter();
+		typeWriter();
 		// TODO 慢慢引导查看更多??
 		const dom = document.querySelector('#look')
 		dom.addEventListener('click', () => {
+			confirm('想查看更多, 得亲我一口哦~')
 			window.location.href = "./love"
 		})
+
+
+		function autoScrollToBottom(targetElement) {
+			const HEI = document.documentElement.clientHeight
+			const isOverflow = targetElement.scrollHeight >= HEI - 50;
+			console.log(isOverflow);
+			if (isOverflow) {
+				// 使用 requestAnimationFrame 优化滚动效果 
+				requestAnimationFrame(() => {
+					window.scroll(0, targetElement.scrollHeight - HEI + 50);
+				});
+			}
+		}
 	</script>
 </body>
 
