--- a/love/index.html
+++ b/love/index.html
@@ -48,8 +48,9 @@
 			<div id="/section-1/page-1" class="ft-page page-1" data-id="page-1" data-title="娇娇">
 				<p class="text1" id="ce"> 以前的我</p>
 				<p class="text2">一个人的生活 </p>
-				<p class="text2" style="display: inline-block; font-size:20px; cursor: pointer;" onclick="Flowtime.next()">
-					键盘↓查看(或者点击我)</p>
+				<p class="text2" style="display: inline-block; font-size:20px; cursor: pointer;" title="点我~"
+					onclick="Flowtime.next()">
+					键盘↓查看(或者手机向下滑动哦)</p>
 
 			</div>
 			<div id="/section-1/page-2" class="ft-page page-2" data-id="page-2" data-title="娇娇">
@@ -298,12 +299,12 @@
 
 					<br />
 					<br />
-					<span style="color: red;">娇宝宝</span>
+					<span style="color: red;">小笨蛋</span>
 					<spen id="dianwo" style="cursor: pointer;">我们在一起吧</spen><br>
 					<!-- <span>我想和你一起经历更多的美好时光，与你共度余生。</span> -->
 
 					<br>
-					<span style="font-size: 12px; padding:16px 0; cursor: pointer;" id='esc' onclick="lookAll(event)">
+					<span style="font-size: 12px; padding:16px 0; cursor: pointer;" id='esc' title="点我~" onclick="lookAll(event)">
 						esc查看全部(点击我~)</span>
 
 
